--- a/src/components/blocks/ImageBlock.astro
+++ b/src/components/blocks/ImageBlock.astro
@@ -1,4 +1,5 @@
 ---
+import type { Code } from "astro:components";
 import api from "../../api";
 import { Image } from "astro:assets";
 
@@ -11,17 +12,44 @@ interface Attrs {
 interface Props {
   attrs: Attrs;
   alt?: string;
+  innerHTML?: string;
 }
 
-const { attrs, alt = "" } = Astro.props;
-console.log("2-");
+const { attrs, alt = "", innerHTML = "" } = Astro.props;
 const image = await fetch(`${api.url}/finell/v1/media/?id=${attrs.id}?size=${attrs.sizeSlug}`).then((res) => res.json());
-console.log("-2");
 const [src, width, height] = image.src;
+
+const customAlt = innerHTML.match(/alt="([^"]*)"/)[1];
+
+const imageProps = {
+  src,
+  width,
+  height,
+  alt: customAlt || alt,
+  srcset: image.srcset,
+  sizes: image.sizes,
+};
+
+const link = (innerHTML.match(/<a [^>]+>/) || [""]).shift();
+const regex = /(\w+)\s*=\s*"([^"]*)"/g;
+const linkAttrs = {};
+let match: string[];
+
+while ((match = regex.exec(link)) !== null) {
+  linkAttrs[match[1]] = match[2];
+}
 ---
 
 <figure class:list={["image", ...api.blockClass(attrs)]}>
-  <Image src={src} width={width} height={height} srcset={image.srcset} sizes={image.sizes} alt={alt} />
+  {
+    link ? (
+      <a {...linkAttrs}>
+        <Image {...imageProps} />
+      </a>
+    ) : (
+      <Image {...imageProps} />
+    )
+  }
 </figure>
 
 <style>
