--- a/src/components/composition/Flex.astro
+++ b/src/components/composition/Flex.astro
@@ -1,10 +1,12 @@
 ---
-const propClasses = ["column", "justify-between"];
+const propClasses = ["column", "justify-between", "justify-center"];
+const { tagName = "div", ...props } = Astro.props;
+const Tag = tagName;
 ---
 
-<div class:list={["flex", ...propClasses.map((className) => Astro.props[className] && className)]}>
+<Tag class:list={["flex", ...propClasses.map((className) => Astro.props[className] && className)]} {...props}>
   <slot />
-</div>
+</Tag>
 
 <style>
   .flex {
@@ -17,5 +19,9 @@ const propClasses = ["column", "justify-between"];
 
   .flex.justify-between {
     justify-content: space-between;
+  }
+
+  .flex.justify-center {
+    justify-content: center;
   }
 </style>
