--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Header from "@components/parts/Header.astro";
+import ColorThemePicker from "@components/parts/ColorThemePicker.astro";
 import "@styles/global/index.css";
 
 const { title, metaDesc, isHome } = Astro.props;
@@ -21,6 +22,5 @@ const siteTitle = "Markus Finell - Web developer";
     <main class="pb--xl">
       <slot />
     </main>
-    <footer id="footer"></footer>
   </body>
 </html>
