--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -3,18 +3,15 @@ import Layout from "./Layout.astro";
 import Blocks from "@components/Blocks.astro";
 import Wrapper from "@components/composition/Wrapper.astro";
 import Stack from "@components/composition/Stack.astro";
-import Flow from "@components/composition/Flow.astro";
 
 const { post, title } = Astro.props;
 ---
 
 <Layout title={title === false ? "" : title || post.post_title} metaDesc={post.post_excerpt} {...Astro.props}>
-  <Wrapper tagName="article" className="content">
-    <Stack space="xl">
-      <h1>{post.post_title}</h1>
-      <Flow>
-        <Blocks blocks={post.block_content} />
-      </Flow>
+  <Wrapper tagName="article">
+    <Stack gap="2xl">
+      {title && <h1>{post.post_title}</h1>}
+      <Blocks blocks={post.block_content} />
     </Stack>
   </Wrapper>
 </Layout>
