Add dispatch deploy

--- a/src/components/parts/Header.astro
+++ b/src/components/parts/Header.astro
@@ -14,7 +14,7 @@ import MainNav from "@components/parts/MainNav.astro";
 <style>
   #header {
     padding-block: var(--space--md);
-    align-items: center;
+    align-items: baseline;
   }
 
   .site-title {
