--- a/src/components/blocks/ProjectGrid.astro
+++ b/src/components/blocks/ProjectGrid.astro
@@ -16,7 +16,7 @@ interface Props {
 const { attrs, innerBlocks } = Astro.props;
 ---
 
-<Flex column class="project-grid gap--lg">
+<Flex column class="project-grid gap--xl">
   <h2>{attrs.heading}</h2>
   <Blocks blocks={innerBlocks} />
 </Flex>
