--- a/src/components/composition/Grid.astro
+++ b/src/components/composition/Grid.astro
@@ -1,10 +1,10 @@
 ---
-const { tagName = "div", className = "", columns, minWidth, gap, ...props } = Astro.props;
+const { tagName = "div", columns, minWidth, gap, ...props } = Astro.props;
 const Tag = tagName;
 ---
 
 <Tag
-  class:list={["grid", className]}
+  class:list={["grid"]}
   style={{
     "--max-columns": columns,
     "--min-width": minWidth,
@@ -20,6 +20,5 @@ const Tag = tagName;
     --w: max(var(--min-width), calc(100% * (1 / (var(--max-columns) + 1) + 0.01)));
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(min(var(--w), 100%), 1fr));
-    gap: var(--gap, var(--space--md));
   }
 </style>
