--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,11 @@
 ---
+import '../css/global.css';
+import data from '../content/data/data.json';
+
 interface Props {
-	title: string;
+	title?: string;
 }
+
 const { title } = Astro.props;
 ---
 
@@ -11,39 +15,30 @@ const { title } = Astro.props;
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+		<link rel="manifest" href="/site.webmanifest">
 		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
+		<title>{title && `${title} | `}{data.siteTitle}</title>
 	</head>
 	<body>
-		<slot />
+		<div class="wrapper py-m">
+			<header class="repel">
+				<a href="/" class="site-title"><img src="/apple-touch-icon.png" alt="Markus Finell website logo" width="50" height="50"></a>
+				
+				<nav>
+					<ul class="cluster gutter-xs" role="list">
+						{Object.keys(data.menu).map(slug => {
+							return <li><a href={`/${slug}`}>{data.menu[slug]}</a></li>
+						})}
+					</ul>
+				</nav>
+			</header>
+			<main class="flow py-xl">
+				<slot />
+			</main>
+			<footer>This is the end</footer>
+		</div>
 	</body>
 </html>
-<style is:global>
-	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
-	}
-	html {
-		font-family: system-ui, sans-serif;
-		background: #13151a;
-	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
-	}
-</style>
