--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,7 +30,7 @@ const { title, description, date } = Astro.props;
 		<div class="wrapper py-m">
 			<header class="repel">
 				<a href="/" class="site-title">
-					<img src="/favicon-32x32.png" alt="Markus Finell website logo" width="32" height="32">
+					<img src="/apple-touch-icon.png" alt="Markus Finell website logo" width="50" height="50">
 				</a>
 				<nav>
 					<ul class="cluster gutter-xs" role="list">
