--- a/src/layouts/Article.astro
+++ b/src/layouts/Article.astro
@@ -36,6 +36,6 @@ const structuredData = {
     <div class="prose layout-grid flow">
         <h1 class="text-step-4">{title}</h1>
         <slot />
-        <p class="text-step-00">Published on: <time datetime={date}>{formattedDate}</time></p>
+        <p class="text-step-00">Published on <time datetime={date}>{formattedDate}</time></p>
     </div>
 </Layout>
