--- a/src/css/global/reset.css
+++ b/src/css/global/reset.css
@@ -24,13 +24,15 @@ p,
 figure,
 blockquote,
 dl,
-dd {
+dd,
+ul,
+ol {
   margin: 0;
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
-ul[role='list'],
-ol[role='list'] {
+ul[role="list"],
+ol[role="list"] {
   list-style: none;
   margin-block-end: 0;
   padding: 0;
